--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,34 +1,98 @@
+.home-wrapper{
+    display: flex;
+    margin: 45px 15px;
+    mat-label{
+        background: green;
+        color: #fff;
+        padding: 10px;
+        width: 95%;
+        display: block;
+        border-radius: 2px;
+        margin: 0 10px 10px 0;
+    }
+    .mat-form-field{
+    width: 100%;
+        padding-right: 10px;
+    }
 .product {
+    display: flex;
+    justify-content: center;
+    border-left: 1px solid #aeaeae73;
     .product-wrapper {
         display: flex;
         flex-direction: column;
-        align-items: center;
         img {
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            height: 200px;
+            max-width: 250px;
+            border-radius: 5px;
+        }
+        .opacity {
+            opacity: 0.5;
+        }
+        .out-of-stock{
+            background: #aeaeae;
+    border-radius: 4px;
+    padding: 10px;
+    color: #fff;
+    font-weight: 500;
         }
     }
     .product-name {
         font-weight: bold;
         margin: 4px;
     }
+    .product-details {
+        color: #5f5f5f;
+        font-size: 12px;
+    }
     .product-item {
         float: left;
         margin: 10px;
         min-width: 100px;
+        &:hover{
+            transform: scale(1.1);
+            transition: transform 0.5s;
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            -ms-transform: scale(1.1);
+            -o-transform: scale(1.1);
+            -webkit-transition: transform 0.5s;
+            -moz-transition: transform 0.5s;
+            -ms-transition: transform 0.5s;
+            -o-transition: transform 0.5s;
+}
     }
     .product-quantity {
         margin: 10px auto;
+        background: #aeaeae54;
+        border-radius: 3px;
+        color: #4a4747;
+        padding: 15px;
+        display: flex;
         input {
             width: 50px;
             margin-left: 15px;
+            float: left;
+        }
+        label {
+            margin-left: 6px;
+            float: left;
         }
         button {
             background: #ababd2;
             color: #fff;
+            height: 30px;
+    width: 30px;
+    margin-left: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
         }
     }
     .mat-card {
-        height: 350px;
+        height: 100%;
     }
+}
 }
